--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,58 +21,58 @@
 
 
     <Button
-        android:id="@+id/q1"
+        android:id="@+id/Q1"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:text="1"
+        android:text="正直村とウソつき村"
         android:gravity="left"
         android:textSize="36sp" />
 
     <Button
-        android:id="@+id/q2"
+        android:id="@+id/Q2"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:text="2"
+        android:text="二つの容器"
         android:gravity="left"
         android:textSize="36sp" />
 
     <Button
-        android:id="@+id/q3"
+        android:id="@+id/Q3"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:text="3"
+        android:text="二つの砂時計"
         android:gravity="left"
         android:textSize="36sp" />
 
     <Button
-        android:id="@+id/q4"
+        android:id="@+id/Q4"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:text="4"
+        android:text="２つの錠剤"
         android:gravity="left"
         android:textSize="36sp" />
 
     <Button
-        android:id="@+id/q5"
+        android:id="@+id/Q5"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:text="5"
+        android:text="赤白帽問題"
         android:gravity="left"
         android:textSize="36sp" />
 
     <Button
-        android:id="@+id/q6"
+        android:id="@+id/Q6"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:text="6"
+        android:text="２種類のビー玉"
         android:gravity="left"
         android:textSize="36sp" />
 
     <Button
-        android:id="@+id/q7"
+        android:id="@+id/Q7"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:text="7"
+        android:text="円周率"
         android:gravity="left"
         android:textSize="36sp" />
 
