--- a/app/src/main/res/layout/activity_pdf1.xml
+++ b/app/src/main/res/layout/activity_pdf1.xml
@@ -6,19 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".pdf1">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal">
         <Button
-            android:id="@+id/a1"
-            android:layout_width="match_parent"
-            android:layout_height="77dp"
-            android:text="解答"
-            android:gravity="left"
-            android:textSize="36sp" />
+        android:id="@+id/a1"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:text="解答"
+        android:gravity="left"
+        android:textSize="36sp" />
 
+    <Button
+        android:id="@+id/q1"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:text="問題"
+        android:gravity="left"
+        android:textSize="36sp" />
+
+    </LinearLayout>
         <com.joanzapata.pdfview.PDFView
             android:id="@+id/pdfview"
             android:layout_width="match_parent"
